<resources>
    <string name="app_name">Candaes Yan Soiree</string>
    <string name="desc">desc</string>
    <string name="adresse">adresse</string>
    <string name="Adresse">Adresse</string>
    <string name="coordon_es">Coordonées</string>
    <string name="libelle">libelle</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="preciser_la_date">Preciser la date</string>
    <string name="preciser_l_heure">Preciser l\'heure</string>
    <string name="retour">Retour</string>
    <string name="ajouter_cette_soir_e">Ajouter cette soirée</string>
    <string name="Coordon_es">Coordonées</string>
    <string name="adressetxt">Adresse</string>
    <string name="dialog_del_acount">ATTENTION !!!</string>
    <string name="dialog_del_ok">OK</string>
    <string name="dialog_del_cancel">annuler</string>
    <string name="dialog_del_body">Supprimer le compte est irréversible.</string>
    <string name="dialog_del_afterCancel">Action annuler.</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="voir_map">voir map</string>
    <string name="suppr_compte">suppr compte</string>
    <string name="candaes_yan">Candaes Yan</string>
    <string name="ajouter_ma_soir_e">Ajouter ma soirée</string>
    <string name="identification_du_membre">Identification du membre</string>
    <string name="login">Login</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="valider">Valider</string>
</resources>